...
  }

  useFocusEffect(onNonExistentCollection)

  if ((isUpdatingCollection && collection) || !isUpdatingCollection) {
    return (
      <Layout testID="collection.editor.screen">
        <CollectionEditorForm collection={collection} onSubmit={onSubmit} />
      </Layout>
    )
  } else {
    /**
     * If the `collectionId` is defined and the collection is `null`, an alert
...
