...
    ),
  )

  return (
    <>
      <CreateMenu collection={collection} ref={createMenuRef} />
      <View testID="library.screen" style={styles.screen}>
        <View style={[styles.header, styles.padding]}>
          <Text size="heading">{translate`Library`}</Text>
          <View style={styles.headerInlineEnd}>
            {typeof collection !== 'undefined' && (
              <Link
                accessibilityLabel={translate`Edit the currently selected collection`}
...
                <Icon name="edit" />
              </Link>
            )}
            <Pressable
              accessibilityLabel={translate`Open menu to create collection or note`}
              accessibilityRole="button"
              testID="library.create.menu.button"
              onPress={() => {
                createMenuRef.current?.open()
              }}
            >
              <Icon name="plus" />
            </Pressable>
...
