...
      },
    }),
  )
  const hasDueReview = data[0] !== null

  return (
    <View testID="home.screen" style={styles.screen}>
      <View style={styles.padding}>
        <View
          style={{
            alignItems: 'center',
            flexDirection: 'row',
            justifyContent: 'space-between',
...
          <View>
            <Link
              href={{
                pathname: '/notes/new',
                params: { collections: [collection.id] },
              }}
              testID="home.note.create.button"
              asChild
            >
              <Pressable accessibilityLabel={translate`Add note`}>
                <Icon name="plus" />
              </Pressable>
            </Link>
...
