...

      log.error(error)
    }
  }

  return collection && !isFetching ? (
    <View testID="onboarding.notes.screen">
      {collection.notes.map((note) => (
        <Link key={note.id} href={`/onboarding/notes/edit/${note.id}`}>
          {JSON.stringify(note, null, 2)}
        </Link>
      ))}
      {collection.notes.length ? (
...
          <Link href="/onboarding/notes/new">
            <Trans>Add another note</Trans>
          </Link>
          <Pressable
            accessibilityRole="button"
            onPress={() => handleCompleteOnboarding()}
            testID="onboarding.notes.cta.button"
          >
            <Trans>Finish</Trans>
          </Pressable>
        </>
      ) : (
        <Link
...
