appId: ${appId}
tags:
  - subflow
---
- assertVisible:
    id: collection.editor.screen

- inputText: ${collectionName}

- tapOn:
    id: collection.editor.cta.button

- assertVisible:
    id: library.collection.screen

- assertVisible:
    text: ${collectionName}
