name: >-
  [Collections] When editing a collection, and it doesn't exist, an alert is shown
appId: ${appId}
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: onboarding/complete

      - runFlow:
          file: ../../__subflows__/open-link.yaml
          env:
            link: hibi://collections/0/edit

      - assertVisible:
          text: The collection doesn't exist

      - tapOn:
          text: OK

      - assertVisible:
          id: home.screen
