name: '[Notes] When creating a note > it can be created from a collection'
appId: ${appId}
env:
  databaseFixture: onboarding/complete
  collectionName: Collection Name
  front: Front 1
  back: Back 1
---
- runFlow:
    file: ../../../fixtures/loadDatabaseFixture.yaml
    env:
      databaseFixture: ${databaseFixture}

- launchApp

- runFlow: ../../library/__subflows__/view-library.yaml

- tapOn:
    text: ${collectionName}

- tapOn:
    id: library.create.menu.button

- tapOn:
    id: create.note.link

- runFlow:
    file: ../__subflows__/create-note.yaml
    env:
      front: ${front}
      back: ${back}
      reversible: true
      separable: true

- tapOn:
    text: Back

- assertVisible:
    text: .*${front}.*

- assertVisible:
    text: .*${back}.*
