name: >-
  [Collections]
  When editing a collection, and it exists,
  it can be edited via a navigation from a deep link
appId: ${appId}
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: onboarding/complete

      - runFlow:
          file: ../../__subflows__/open-link.yaml
          env:
            link: hibi://collections/1/edit

      - runFlow:
          file: ../__subflows__/edit-collection.yaml
          env:
            collectionName: New Collection Name

      - assertVisible:
          id: library.collection.screen

      - assertVisible:
          text: ${collectionName}

      - tapOn:
          text: Back

      - assertVisible:
          id: home.screen
