name: Review > when there are no due reviewables > and a review is started from a deep link navigation > the user is informed and can navigate home
appId: ${appId}
---
- runFlow:
    file: ../../../fixtures/loadDatabaseFixture.yaml
    env:
      databaseFixture: review/none-due

- openLink:
    link: hibi://review

- assertVisible:
    id: review.no-reviews

- tapOn:
    id: review.no-reviews.cta.button

- assertVisible:
    id: home.screen
