name: >-
  [Notes] When creating a note, it can be created via the home screen
appId: ${appId}
env:
  databaseFixture: onboarding/complete
  front: Front 1
  back: Back 1
  reversible: true
  separable: true
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: ${databaseFixture}

      - runFlow:
          file: ../../__subflows__/launch-app.yaml

      - tapOn:
          id: home.note.create.button

      - runFlow:
          file: ../__subflows__/create-note.yaml
          env:
            front: ${front}
            back: ${back}
            reversible: ${reversible}
            separable: ${separable}

      - tapOn:
          text: Back

      - assertVisible:
          id: home.screen
