name: >-
  [Collections] When creating a collection, it can be created via a navigation from the library
appId: ${appId}
env:
  collectionName: New Collection Name
  databaseFixture: onboarding/complete
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: ${databaseFixture}

      - runFlow:
          file: ../../__subflows__/launch-app.yaml

      - runFlow: ../../library/__subflows__/view-library.yaml

      - tapOn:
          id: library.create.menu.button

      - assertVisible:
          id: library.create.menu

      - tapOn:
          id: create.collection.link

      - runFlow:
          file: ../__subflows__/create-collection.yaml
          env:
            collectionName: ${collectionName}

      - tapOn:
          text: Back

      - assertVisible:
          id: library.screen
