name: '[Library] When creating a collection > it can be created via a navigation from the library'
appId: ${appId}
env:
  collectionName: New Collection Name
  databaseFixture: onboarding/complete
---
- runFlow:
    file: ../../../fixtures/loadDatabaseFixture.yaml
    env:
      databaseFixture: ${databaseFixture}

- launchApp

- runFlow: ../__subflows__/view-library.yaml

- tapOn:
    id: library.create.menu.button

- assertVisible:
    id: library.create.menu

- tapOn:
    id: create.collection.link

- runFlow:
    file: ../__subflows__/create-collection.yaml
    env:
      collectionName: ${collectionName}
