name: >-
  [Notes] When editing a note, and it doesn't exist, an alert is shown
appId: ${appId}
env:
  databaseFixture: onboarding/complete
---
- retry:
    maxRetries: 3
    commands:
      - runFlow:
          file: ../../../fixtures/loadDatabaseFixture.yaml
          env:
            databaseFixture: ${databaseFixture}

      - runFlow:
          file: ../../__subflows__/open-link.yaml
          env:
            link: hibi://notes/0/edit

      - assertVisible:
          text: The note doesn't exist

      - tapOn:
          text: OK

      - assertVisible:
          id: home.screen
